--- a/2-sol/2-sol.tex
+++ b/2-sol/2-sol.tex
@@ -36,7 +36,7 @@
 
 % Info para armar título.
 \title{Práctica 2 de álgebra 1} % título
-\author{D. Garraz} % autor
+\author{Nad Garraz} % autor
 \date{\today} % Cambiar de ser necesario
 % \maketitle  % Para que aprezca el título en el documento
 
